# artifacts/api-server/src/routes/index.ts
@@ -8,6 +8,7 @@ import notificationsRouter from "./notifications";
 import schoolVotesRouter from "./school-votes";
 import storageRouter from "./storage";
 import adminRouter from "./admin";
+import messagesRouter from "./messages";
 
 const router: IRouter = Router();
 
@@ -20,5 +21,6 @@ router.use(notificationsRouter);
 router.use(schoolVotesRouter);
 router.use(storageRouter);
 router.use(adminRouter);
+router.use(messagesRouter);
 
 export default router;
