# lib/db/src/schema/index.ts
@@ -3,3 +3,4 @@ export * from "./posts";
 export * from "./services";
 export * from "./notifications";
 export * from "./school-votes";
+export * from "./messages";
